syntax = "proto3";

service QuestionService {
    rpc SearchQuestions(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
    string query = 1;
}

message SearchResponse {
    repeated Question questions = 1;
}

message Question {
    string id = 1;
    string title = 2;
    string type = 3;
    string anagramType = 4;
    repeated Block blocks = 5;
    repeated Option options = 6;
    string solution = 7;
}

message Block {
    string text = 1;
    bool showInOption = 2;
    bool isAnswer = 3;
}

message Option {
    string text = 1;
    bool isCorrectAnswer = 2;
}